--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -122,6 +122,8 @@
  HNN_chen_san_li_hog:0 "陈三立"
  HNN_He_Long_hog:0 "贺龙"
  HNN_Chen_Yun_hog:0 "陈云"
+ HNN_mao_ze_dong:0 "毛泽东"
+ HNN_Mao_Ze_Dong_eco:0 "毛泽东"
  HNN_Mao_Ze_Dong_hog:0 "毛泽东"
  HNN_Zhou_En_Lai_hog:0 "周恩来"
  HNN_Gao_Gang_hog:0 "高岗"
@@ -139,7 +141,6 @@
  HNN_shi_ding_wu_hog:0 "石顶武"
  HNN_shi_tai_xu_hog:0 "太虚法师"
  HNN_Rong_Yi_Ren_eco:0 "荣毅仁"
- HNN_Mao_Ze_Dong_eco:0 "毛泽东"
  HNN_xiao_ke_sec:0 "萧克"
  HNN_shen_cong_wen_sec:0 "沈从文"
  HNN_Shang_Kun_sec:0 "杨尚昆"
@@ -156,7 +157,6 @@
  HNN_shi_yin_shun_eco:0 "印顺法师"
  HNN_chen_quzhen:0 "陈渠珍"
  HNN_yuan_zuming:0 "袁祖铭"
- HNN_mao_ze_dong:0 "毛泽东"
  HNN_dai_jitao:0 "戴季韬"
  HNN_zhou_xicheng:0 "周西成"
  HNN_tang_shengming:0 "唐生明"
@@ -181,14 +181,14 @@
  POLITICS_HNN_lu_dangping_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1895年，大清帝国 湖南省 宁远县§!\n§Y派系：§!§g第二军§!\n§Y军旅生涯：§!§g鲁荡平早年曾经在湖南铁路学堂学习，后来考入北京法政大学。他起初是同盟会会员，后改入革命中华党。其兄鲁涤平担任建国湘军第二军军长期间，他随军担任参谋。§!" 
  HNN_Huang_Shiheng_for_sco_desc: "§Y生于：§!§L1889年；大清帝国、湖南省郴州§!\n§Y派系：§!§L无派系§!\n§Y背景：§!§L生于一户书香门第，在家庭潜移默化的影响下，黄士衡从小就养成了热爱自学的习惯，打下了坚实的国学根底。辛亥革命爆发两年后，黄士衡考取留美公费生，先后毕业于哥伦比亚大学和艾奥瓦大学，并获得了多个学位。\n\n在纽约《民气周报》担任一段时间主编后，黄士衡于1920年毕业回国。回国后，他在四川成都高等师范学校任文史系主任。随后前往湖南，在湖南商业专门学校任职，后来又成为该校校长，并在湖南大学的创立中发挥了关键作用。\n\n尽管北伐期间时局动荡不安，但黄士衡仍两度担任湖南省教育厅厅长，致力于充实发展教育事业，同时推动了湖南省公立和私立学校的长足发展。随着汤芗铭介入，谭延闿掌权，湖南局势日趋稳定，黄士衡的职业生涯也得以更进一步，1932年他被任命为湖南大学校长，黄士衡成立了一个7人委员会以保障该省教育质量。此后，他为文化和教育事业做出了诸多重大贡献，包括向政府下辖的学校和图书馆捐款等。§!"
  HNN_wang_tianpei_for: "王天培"
- HNN_wang_tianpei_for_desc:0 "§Y生于：§!§L1888年12月；大清帝国、贵州省天柱§!\n§Y派系：§!§l共和派§!\n§Y背景：§!§L作为一名决心报国之士，在黄兴领导的武汉起义中，王天培被任命为凤凰山要塞司令。辛亥革命成功后，因立有军功，王天培被送入著名的保定军校深造，在那里他进一步提升了自己的军事指挥能力。\n\n在反对袁世凯的护国战争中，王天培在黔军中逐步晋升，这一时期也奠定了该地区的政治格局。起初，他是贵州军阀袁祖铭的下属，但由于他与革命领袖孙中山的交往，他被割据西南的军阀们夺去了实权，这进一步点燃了他的共和主义热情。\n\n怀着满腔革命热情，王天培成为了国民革命军第十军军长，率领该军参与北伐，并于湘北取得了诸多胜利。然而，随着王天培部于武汉惨败，蒋介石的广州政府又在其南撤途中垮台，一切戛然而止。北伐失败后，王天培在谭延闿政府任职，作为湘南湘西边境持续不断土匪问题的专职顾问。§!"
+ HNN_wang_tianpei_for_desc:0 "§Y生于：§!§L1888年12月；大清帝国、贵州省天柱§!\n§Y派系：§!§l共和派§!\n§Y背景：§!§L王天培，出生于天柱县织云乡，侗族。作为一名决心报国之士，在黄兴领导的武汉起义中，王天培被任命为凤凰山要塞司令。辛亥革命成功后，因立有军功，王天培被送入著名的保定军校深造，在那里他进一步提升了自己的军事指挥能力。\n\n在反对袁世凯的护国战争中，王天培在黔军中逐步晋升，这一时期也奠定了该地区的政治格局。起初，他是贵州军阀袁祖铭的下属，但由于他与革命领袖孙中山的交往，他被割据西南的军阀们夺去了实权，这进一步点燃了他的共和主义热情。\n\n怀着满腔革命热情，王天培成为了国民革命军第十军军长，率领该军参与北伐，并于湘北取得了诸多胜利。然而，随着王天培部于武汉惨败，蒋介石的广州政府又在其南撤途中垮台，一切戛然而止。北伐失败后，王天培在谭延闿政府任职，作为湘南湘西边境持续不断土匪问题的专职顾问。§!"
  HNN_hu_ying_eco: "胡瑛"
  HNN_hu_ying_eco_desc:0 "§Y生于：§!§L1884年；大清帝国、湖南省桃源§!\n§Y派系：§!§L无派系§!\n§Y背景：§!§L胡瑛少时经黄兴介绍至武昌，随后加入了清朝新军及华兴会，并参与策划了失败的1904年长沙起义。在暗杀多名清朝官员未遂后，胡瑛逃往日本，后又奉孙中山之命回国。回国后，胡瑛又发动了一次失败的起义，最终遭当地政府逮捕。\n\n在狱中，胡瑛加入了文学社，后于辛亥革命中发挥了关键作用。出狱后，胡瑛通过其革命关系，成为了新生民国（湖北军政府）的首位外交部长。之后，他短暂担任过孙中山的山东都督，后又被临时大总统袁世凯任命为新疆青海屯垦使。随着袁世凯治下的中国日渐混乱，胡瑛加入了支持袁世凯的筹安会，成为“洪宪六君子”之一。在1916年袁世凯去世后，胡瑛是少数几个未被革命党追究之人，后出任护法军湘西招抚使。\n\n1920年，在张敬尧被逐后，胡瑛担任湖南省矿务局协理。在北伐战争后湖南混乱的政局中，胡瑛选择置身事外，不参与任何一派。§!"
  HNN_ye_dehui_sec: "叶德辉"
  HNN_ye_dehui_sec_desc:0 "§Y生于：§!§L1864年；大清帝国、江苏省吴县§!\n§Y派系：§!§L无派系§!\n§Y背景：§!§L叶德辉曾就读于长沙岳麓书院，于1885年通过科举考试，1892年中进士，清廷授其吏部主事。世纪之交的维新变法时期，叶德辉激烈攻击康、梁变法思想，并破坏湖南新政。\n\n1910年湖南发生严重水灾，叶德辉屯积谷物居奇，激起长沙抢米风潮，被清廷革去功名。辛亥革命期间，叶德辉避往南岳僧寺，1915年任省教育会长，发起成立经学会。袁世凯复辟称帝时，他组织筹安会湖南分会，赞成复辟君主制。\n\n在混乱的1920年代，叶德辉退出了政治舞台，并逃离了湖南，但在清廷复辟后又回到了湖南。现在他已正式退休，并把精力放在编纂儒家经典、撰写史书上。作为湖南最杰出的学者兼守旧派领袖，叶德辉仍有可观的影响力。§!\n\n§Y备注：在这个充斥着共和主义和革命者的时代里，叶德辉是一个颇具影响力的保守派人物。他不仅在长沙农民口中备受非议，同时也受到当地工会运动的批评。然而，他却备受当地精英权贵阶层，尤其是赵恒惕的青睐。§!"
  HNN_Liu_Zhesheng_cair_desc: "§Y生于：§!§L1914年2月22日；中华民国、直隶省保定\n§Y派系：§!§L无派系§!\n§Y背景：§!§L柳哲生出生于保定，虽然其家族原籍湖南，但在当地广受尊敬享有盛誉。柳家在当地世代经商，因而相当富有。柳哲生之父柳树藩没有继承家族生意，而是进入了保定北洋速成武备学堂。受父亲的影响，柳哲生于1933年进入保定军校学习。在校学习期间，他对高空飞行产生了浓厚的兴趣，并报名参加了飞行员选拔考试。毕业后，湖南省政府聘请他担任家乡航空学员的教官。§!"
  HNN_Wang_Zhi_sec_ade_desc: "§Y生于：§!§L1907年；大清帝国、湖南省长沙§!\n§Y派系：§!§L无派系§!\n§Y背景：§!§L王之先后就读于清华学校、威斯康星大学和洛维其大学，他是湖南陆军中众多新晋青年才俊的代表。1928年，他进入西点军校学习，回国后历任税警总团及湘军排长、连长、营长、团长。在税警部队的服役经历让王之能很好地从有组织结构中甄别渗透者和敌方特工，因此他被选中，成为了湖南情报部门中的一位杰出新人。§!"
- HNN_lu_diping_advisor_desc: "§Y生于：§!§L1887年；大清帝国、湖南省宁乡§!\n§Y派系：§!§l第二军§!\n§Y背景：§!§L鲁涤平于清朝末年投身革命政治，并且参加了辛亥革命。1915年，鲁涤平加入了孙中山的革命阵营，同时在湘军任职。随后几年，鲁涤平壮大为湖南的重要军阀之一，他在赵恒惕和谭延闿之间摇摆不定。因其部下同情谭延闿，鲁涤平最终倒向谭延闿一方，并在赵恒惕将谭延闿逐出湖南后与他一同流亡。\n\n1925年，谭延闿的部队被改编为国民革命军第二军，鲁涤平被任命为副司令。北伐战争中，鲁涤平和第二军入湘作战，但战事最终演变成了一场灾难，国民党对武汉的进攻激怒了德国人，导致他们下场干预。在国民党被彻底击溃后，湖南的第二军陷入了重围。在赵恒惕提出全面赦免第二军后，鲁涤平和谭延闿才得以幸免。自那之后，鲁涤平在湖南过着平静的生活，但如果情况有变，谭延闿有需要时他，他随时准备为之效力§!"
+ HNN_Lu_Diping_eco_ade_desc: "§Y生于：§!§L1887年；大清帝国、湖南省宁乡§!\n§Y派系：§!§l第二军§!\n§Y背景：§!§L鲁涤平于清朝末年投身革命政治，并且参加了辛亥革命。1915年，鲁涤平加入了孙中山的革命阵营，同时在湘军任职。随后几年，鲁涤平壮大为湖南的重要军阀之一，他在赵恒惕和谭延闿之间摇摆不定。因其部下同情谭延闿，鲁涤平最终倒向谭延闿一方，并在赵恒惕将谭延闿逐出湖南后与他一同流亡。\n\n1925年，谭延闿的部队被改编为国民革命军第二军，鲁涤平被任命为副司令。北伐战争中，鲁涤平和第二军入湘作战，但战事最终演变成了一场灾难，国民党对武汉的进攻激怒了德国人，导致他们下场干预。在国民党被彻底击溃后，湖南的第二军陷入了重围。在赵恒惕提出全面赦免第二军后，鲁涤平和谭延闿才得以幸免。自那之后，鲁涤平在湖南过着平静的生活，但如果情况有变，谭延闿有需要时他，他随时准备为之效力§!"
  POLITICS_HNN_LU_DIPING_DESC:0 "鲁涤平，字咏庵，一作咏安，号旡烦，湖南宁乡人。鲁涤平行伍出身，22岁考入湖南兵目学堂，其立场亲革命党，辛亥革命时参与后续各省独立起义运动。1915年加入中华革命党，1922年升任湖南陆军第二师师长。1924年3月，鲁涤平被孙中山任命为禁烟督办，1924年8月辞退此职务。1924年10月，湖南讨贼军改组为建国湘军，鲁涤平担任建国湘军第二军军长。1925年建国湘军改组为国民革命军，鲁涤平成为国民革命军第二军副军长。1926年7月国民党北伐中，升任第二军军长代理兼右翼指挥官。而当大革命失败之后，鲁涤平和国民党内其他右派将领一起聚集在湖南长沙讨论彼此的出路，但是他并没有选择和大部分右派将领一样去投靠云南的唐继尧。而是留在了湖南和赵恒惕政权达成了和解，在赵氏政府下他并不被信任没有重新掌军，而是转为了衡阳市警察局局长，但是也只是一个空头职务，他手下的副局长们都直接听命于赵恒惕而不是他这个局长。"
  HNN_Hu_Shuhua_eco_sco_desc: "§Y生于：§!§L1886年12月14日；大清帝国、湖南省攸县§!\n§Y派系：§!§L无派系§!\n§Y背景：§!§L1903年，胡庶华通过清朝科举考试，考入湖南私立明德学校学习，后来又公费留学德国，先入柏林矿科大学，再转入柏林工科大学学习。1920年，胡庶华以钢铁冶金工程师学位毕业，两年后带着在欧洲各地钢铁厂参观学到的现代工业金属加工技术回国。\n\n回到湖南后，胡庶华被湖南工业专门学校校长宾步程聘为事务主任。后来，他还担任过武昌、同济和湖南大学的校长。胡庶华在湖南大学落实他在实践和教育层面上对工业发展的愿景，恢复了矿冶工程系，并邀请了许多专家来校任教。\n\n胡庶华强调学生的工业教育，提倡与省内矿冶企业协作交流，并致力于将湖南大学建设成全国钢铁冶金人才培养的重镇。1934年夏天，胡庶华在湖南筹办了中国经济学社第11届学术年会，这是该年会首次在华东新兴沿海城市之外举办。§!"
  HNN_li_jiannong_for: "李剑农"
@@ -196,6 +196,7 @@
  HNN_huang_gonglue_sec: "黄公略"
  HNN_huang_gong_lue_cos: "黄公略"
  HNN_huang_gonglue_sec_desc:0 "§Y生于：§!§L1898年1月24日；大清帝国、湖南省湘乡§!\n§Y派系：§!§R第八军激进派§!\n§Y背景：§!§L黄公略于1916年参军入伍担任排长。他与同排战友彭德怀迅速结为挚友，他们一同在连队里秘密组织救贫会。1923年，他和彭德怀毕业于湖南陆军讲武堂，并加入了唐生智领导的国民革命军第八军第一师。\n\n如同第八军的其他成员一般，黄公略在北伐中表现优异，但这场战争最终还是以失败告终。在邓演达和宋庆龄领导的临委会参与游击之前，第八军是闽赣根据地唯一的一支游击队。黄公略和彭德怀是临委会土改计划的坚定拥护者，在贺龙的领导下，他们成为了第八军激进派的核心人物。在中国摆脱帝国主义压迫之前，只要一息尚存，黄公略决不罢休。§!"
+ HNN_huang_gong_lue_cos_desc:0 "§Y生于：§!§L1898年1月24日；大清帝国、湖南省湘乡§!\n§Y派系：§!§R第八军激进派§!\n§Y背景：§!§L黄公略于1916年参军入伍担任排长。他与同排战友彭德怀迅速结为挚友，他们一同在连队里秘密组织救贫会。1923年，他和彭德怀毕业于湖南陆军讲武堂，并加入了唐生智领导的国民革命军第八军第一师。\n\n如同第八军的其他成员一般，黄公略在北伐中表现优异，但这场战争最终还是以失败告终。在邓演达和宋庆龄领导的临委会参与游击之前，第八军是闽赣根据地唯一的一支游击队。黄公略和彭德怀是临委会土改计划的坚定拥护者，在贺龙的领导下，他们成为了第八军激进派的核心人物。在中国摆脱帝国主义压迫之前，只要一息尚存，黄公略决不罢休。§!"
  HNN_he_yaozu: "贺耀祖" 
  POLITICS_HNN_HE_YAOZU_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1889年5月8日，大清帝国 湖南省 宁乡县§!\n§Y派系：§!§c联省派§!\n§Y军旅生涯：§!§g贺耀祖生于一户富裕人家，曾在贺氏家族学校接受私塾教育，后来又入学玉潭书院。他先是就读于湖南陆军小学第一期，后来又进入武昌陆军第三中学，毕业后因表现优异被送往日本陆军士官学校学习。在那里，贺耀祖加入了同盟会，并参加了辛亥革命。在黄兴的建议下，他回到日本继续深造，并于1916年回国参与了孙中山领导的一系列革命运动。\n\n次年，贺耀祖加入了赵恒惕领导的湘军，并在六年内稳步晋升，从团长一路晋升到师长。然而贺耀祖却在北伐战争期间加入国民党，尽管及时的脱身使其最终免遭北伐失败所带来的巨大政治影响。贺耀祖虽才华横溢，但过往的叛变经历使其难以晋升地方高层——不过他仍是湖南省参谋部的重要成员。§!"
  HNN_song_xilian: "宋希濂"
@@ -5062,7 +5063,7 @@
  HNN_long_hui_er_hui_desc:0 "初会龙华青王大会，燃灯古佛掌教天尊，救渡六亿原魂灵。二会龙华红王大会，弥陀古佛掌教天尊，拯救二亿原魂灵。"
  HNN_long_hui_san_hui:0 "龙华三会"
  HNN_long_hui_san_hui_desc:0 "初会龙华青王大会，燃灯古佛掌教天尊，救渡六亿原魂灵。二会龙华红王大会，弥陀古佛掌教天尊，拯救二亿原魂灵。三会龙华白王大会，弥勒古佛掌教天尊。"
- HNN_xin_yang_jun:0 "有信仰的军队"
+ HNN_xin_yang_jun:0 "神兵下凡"
  HNN_xinang_huo_qian:0 "香火钱"
 
  HNN_ran_deng_ji_si:0 "弥勒降世"
@@ -5114,6 +5115,40 @@
  hunsanqipudu.8.t:0 "柳幸福的一天"
  hunsanqipudu.8.d:0 "柳幸福，原名柳二狗，是长沙城外雨敞坪镇下辖村落的一个小屁孩。柳二狗出生在这里，他爹出生在这片土地，他爷爷出生在这片土地，柳家祖祖辈辈都在这片土地上耕种。只有每逢赶集时他才能跟随父亲去一趟镇子。七岁那年，柳二狗去过一次长沙城，他记不清到底是为什么去，也记不清长沙城长什么样了，他只记得那一眼望不到尽头的街道。平常，城里的人不会来乡下，柳二狗和他的玩伴们平常就在村东头晃到村西头。他只记得有一年，一帮被他父亲称为学生的城里人来乡下宣传什么，好像是什么什么主义的，他也记不得这许多。\n\n在乡里头可玩的有太多，有时候玩腻了，他就会去村里的庙子里，听那里的老爷爷讲故事，什么无生老母，三清祖师爷什么的，有意思极了。每一周就有两三天他会留在庙子里帮忙换故事听。有一天下午，他老爹就带着他在庙子里拜了老爷爷为师傅。老爷爷给他取了个新名字，叫什么教名的，"
  hunsanqipudu.8.a:0 "取名叫幸福..."
+
+#红色神兵
+ HNN_PROC_H:0 "中华大同公社"
+ HNN_PROC_H_ADJ:0 "中国"
+ HNN_PROC_H_DEF:0 "中国"
+
+ HNN_shen_bing_revolution:0 "神兵起义"
+ HNN_shen_bing_revolution_desc:0 "大革命失败以来的近十年磨砺了贺龙的心性，革命绝不是什么一蹰即就的事情，哪怕是失败一次、两次、无数次他都不会放弃，在国民党的北伐、工团党的暴乱接连失败后，贺龙收拢了残兵，前往了湘西的山林中，他重新拾起了数十年前的身份与当地的袍哥和神兵们建立起了联系，并利用着我们破败的乡村谋划着下一次作乱..."
+
+ HNN_shen_bing_victory:0 "§R神兵起义§!成功"
+ HNN_shen_bing_revolution_tt:0 "这将化解§R神兵§!的危机"
+
+ HNN_hong_se_shen_bing:0 "残焰摇风欲曙天，"
+ HNN_hong_se_shen_bing_desc:0 "尽管国民党与工团党的起义皆化为了灰烬，但是贺龙，他仍旧没有放弃，大革命以来每一年每一天都在磨练他的心性。他收编了两股残兵，在湘西、黔北、川东收编那些所谓的神兵，尽管他明白这些人中相当一部分完全不懂得什么是三民主义、什么是工团主义，甚至相当一部分都已经变成了地主的附庸，他们无法笼统的分为革命的和反革命的，因为他们完全不明白什么是革命，但是只有仍然有人在反抗，那么革命的火就有燃烧的可能！"
+ HNN_fen_hui_di_qi:0 "地书投处火连翩。"
+ HNN_fen_hui_di_qi_desc:0 "烈焰翻腾，火光映天，贺龙率众杀入地主庄院，群贼呐喊震地，斩门破户，如风卷残云。高堂之上，账房狼藉，柜中契书堆积如山，尽是地主盘剥血汗，生生压在人身上的枷锁。贺龙拔刀在手，厉声喝道：“此物不焚，何以平怨？此纸不灭，何以雪恨？”众人齐应，怒火滔天，将那一卷卷地契夺出堂前，堆作高垒，烈火引燃，霎时红光炽盛，黑烟冲天。地主跪伏哭号，然群贼不顾，唯有贫农仰天大笑，奋力将锁魂之契投入火海。火舌翻卷，将一字一墨吞噬殆尽，契书化灰，枷锁尽断。烈焰中，风雷震动，仿若天神怒目，昭告世间：旧秩序已焚，新天地将启！"
+ HNN_zheng_bian_yi_qie_li_liang:0 "各路英雄齐聚义，"
+ HNN_zheng_bian_yi_qie_li_liang_desc:0 "四方云动，妖氛弥漫，各路神兵自四野而来，皆奉天命，聚于贺龙旗下。旌旗招展，号令如雷，刀枪错落，战甲森然。贺龙端坐中军，环视众将，朗声道：“天运已至，众神谕令杀劫，假灵乱世，贼寇横行，唯有刀兵可定乾坤！”"
+ HNN_zhu_mie_wan_mo:0 "诛灭万魔天地喜。"
+ HNN_zhu_mie_wan_mo_desc:0 "妖匪声言天下多劫，真主现已降世，只因世界不静，真主不能登基，各神假灵，叫我杀贼，我们打单不单双，早打寅卯，晨打申酉戌。纵火劫掠，焚庙毁经，言道真空家乡皆为空谈，唯有血与火可证天命。妖匪聚众喧嚣，呼号神谕昭然，然世间浑浊，万物未定，真主难现，唯斩尽贼魁，方可荡涤污秽。是以刀枪不息，昼夜不停，昨日寅卯，今日申酉戌，明朝复有劫数，人间仍是杀场。"
+ HNN_lem_shui_pao_cha:0 "冷水泡茶慢慢浓，"
+ HNN_lem_shui_pao_cha_desc:0 "贺龙最初收编的残兵是将这一切的暴动转化的革命的工具，他需要这些人，让这些人去和那些神兵中做教育，分化那些依旧顽固的神兵领袖，将那些出身资产阶级如今依旧反动的分割出现，而让那些出身贫苦的神兵士兵们了解革命的道路究竟在哪里，神佛是无法拯救中国拯救他们自己的。这第一步就是组建农会，组建基层党组织，将那些信仰并不坚定的神兵们发展为我们的党员。"
+ HNN_ge_ming_jiu_dei:0 "穷人铁心跟贺龙。"
+ HNN_ge_ming_jiu_dei_desc:0 "反动政府似破木船，摇摇晃晃下陡滩。看我工农卷巨浪，要把你破船来打翻。行船不怕旋水涡，打铁不怕火烫脚。生死要跟红军走，革命不怕砍脑壳。石榴花开朵朵红，湘西桑植出贺龙。改天打到四川边，天也红来地也红。腊梅花开起春风，冷水泡茶慢慢浓。穷人跟着贺龙走，革命一定能成功。"
+ HNN_shen_bing_dang_yuan:0 "长沙城上起红云，"
+ HNN_shen_bing_dang_yuan_desc:0 "长沙，湖南的中心，是全湖南工人的聚焦地，我们必须将这里牢牢的掌握在自己的手中。这里不仅是经济的心脏、工业的脊梁，更是无数劳动者挥洒汗水、铸就辉煌的圣地！我们绝不能有丝毫松懈，必须以坚定的信念和无可动摇的决心，将这座英雄之城牢牢掌控在我们手中，让它成为不可撼动的坚强堡垒，点燃湖南腾飞的熊熊烈焰！"
+ HNN_xin_yang_gai_zao:0 "烈焰燃时遍地彤。"
+ HNN_xin_yang_gai_zao_desc:0 "要想将神兵这支革命的潜在力量彻底化为革命的生力军，我们就需要从头开始，从根本上改造神兵们的信仰世界，在保持着贺龙便是活龙便是真命天子这样的论述下一步一步的剔除其他神仙，并最终将这样的神佛下凡转变为纯粹的属灵。"
+ HNN_zheng_zhi_su_fan:0 "湘鄂川黔蛟龙腾"
+ HNN_zheng_zhi_su_fan_desc:0 "时机到了，革命的烈火已经熊熊燃起，那些混入其中的反革命们已经被我们逼入了绝境，如今只需要再推一把我们就能将他们完全剔除出革命队伍之中。同时，我们的乡亲们他们幻想出一个皇帝一个真命天子来救你们。乡亲们！这就想错了，你们看见没有皇帝来救你们，七想八想就想靠菩萨靠神来救你们。如今，大家终于醒悟了过来，打破幻想不再有什么神仙皇帝，穷人只能靠自己的双手砸碎旧世界才能得生存！"
+ HNN_tian_ye_hong_lai:0 "天也红来地也红，"
+ HNN_tian_ye_hong_lai_desc:0 "烈焰焚天，赤潮席卷，革命之火已从湘西群山燃向三湘四水。长沙城头赤旗漫卷，洞庭湖畔战鼓震天，工农兵的旗帜插遍每座县城。"
+ HNN_jiu_si_le_xin_ye_hong:0 "就是死了心也红！"
+ HNN_jiu_si_le_xin_ye_hong_desc:0 "头戴八角帽的农民弓着脊梁，镰刀在麦浪中划出金色弧光，汗珠坠入新翻的褐土，化作春泥滋养着写在田垄间的标语。山腰上，扎绑腿的工人抡起铁锤，火星在暮色里迸溅成星群，震落岩壁间沉睡的弹壳。扁担压弯了十八道山梁，麻绳勒进古铜色的肩胛，蜿蜒的队伍背着铁锅与步枪，把苏维埃的火种播进云雾。染血的杜鹃花瓣飘落在磨盘旁，碾槽里还留着昨夜炒熟的麦粒，石缝中却已钻出嫩红的芽尖。当晨雾漫过战壕，染着硝烟味的红旗突然在峰顶招展——那竟是千树万树的枫叶，正把秋山点燃成不灭的火焰！"
 
  CHI_bai_wenwei: "柏文蔚"
  CHI_dai_anlan: "戴安澜"
