--- a/localisation/KR_Yunnan_l_simp_chinese.yml
+++ b/localisation/KR_Yunnan_l_simp_chinese.yml
@@ -2061,21 +2061,25 @@
  YUN_BAI: "白泷帝国"
  YUN_BAI_ADJ: "白泷帝国"
  YUN_BAI_DEF: "白泷帝国"
+ YUN_BAI_ROC: "中华民国"
+ YUN_BAI_ROC_ADJ: "中华民国"
+ YUN_BAI_ROC_DEF: "中华民国"
 
  YUN_Yan_Zi_hog: "严子珍"
  YUN_Dong_Nong_eco: "董澄农"
  YUN_Yan_Chen_sec: "严燮成"
  YUN_Bao_Chen_for: "严宝城"
 
- YUN_BAI_Yan_zi_zen:0 "严子珍"
+ YUN_Yan_zi_zen:0 "严子珍"
  POLITICS_YUNNAN_YAN_DESC:0 "严子珍，原姓杨，具体姓名无从考究。童年丧父，随母嫁入严家，十五、六岁时独立门户，以微薄的借贷资本起家。1903年，严子珍联合彭永昌，杨鸿昌在大理下关合资创办“永昌祥”商号， “永昌祥”经营十余年，商铺遍及中国大江南北、东南亚。其间，严家与杨家联姻，并吸收了多位合伙人的投资，商号隐隐以严子珍为中心。之后彭永昌和杨鸿春和平退伙，在退清了他们的股本后，严家独占鳌头， “永昌祥”方由严子珍单独经营管理，这个商号才真正成为了他施展经商才能的大舞台。"
+
+ YUN_authoritarian_democrat_party_BAI:0 "云贵商帮联盟"
+ YUN_authoritarian_democrat_party_BAI_long:0 "云贵商帮联盟\n§g云南如今的商帮大多发迹于清末，发展至今在滇西已经形成了腾越帮，喜洲帮，鹤庆帮三大商帮，其中又以喜洲帮的“四大家”实力最盛。这些四处走动的贸易天才们对政治并无兴趣，但在传统的经营模式和在各地接触的现代商业的碰撞之间，他们也逐渐形成了一套以温和的自由主义为中心的世界观，并试图更紧密地联合起来，以维护一个能自由贸易的市场环境。§!"
 
  YUN_social_liberal_party_BAI:0 "严家王朝"
  YUN_social_liberal_party_BAI_long:0 "皇道派\n§g皇道派是一个被强制中央化的自由主义派系。皇道派内部成分混杂，有全力支持文化教育发展的学院系，有各路支持自由主义理论的知识分子与实业家，也有被边缘化而不得不以支持帝制为生的国党右翼，不过最重要的还是以严子珍为首的建制派。作为帝国内部最强壮的一股活跃力量，社会自由主义的枝叶正在体制的浇灌下野蛮生长着。§!"
  YUN_social_conservative_party_BAI:0 "枢密院"
  YUN_social_conservative_party_BAI_long:0 "中央派-尹氏封王\n§g皇帝执政，少不了议政。枢密院实际上是一个政府内部的议政机构，它负责辅佐皇帝发布政策，能在一定程度上修改皇帝的法案，拥有很大的权力。枢密院内部都是被精心筛选过的儒士和能人。枢密院由尹辅臣一手构建，因此受他影响很大。§!"
- YUN_authoritarian_democrat_party_BAI:0 "护国派"
- YUN_authoritarian_democrat_party_BAI_long:0 "杨氏封王\n§g杨品相，本是四大家族中杨家的族长，被严子珍赶鸭子上架地拉去总管军队。虽然在名义上他是参谋部总长，但是他庸拙的军事才能使他在参谋部中被孤立，他并不能有效地参与军事会议。但他本人也接受这种情况。他在军事体系之外组织了一股私兵，这批大头兵忠于他们的头子杨品相，并且用激进的白族民族主义武装自己。朝堂上也有不少人倾向于杨品相的激进民族主义思想。他们被合称为“护国派”§!"
  YUN_market_liberal_party_BAI:0 "制宪派"
  YUN_market_liberal_party_BAI_long:0 "董氏封王\n§g出于对严子珍独揽大权的不满，董澄农利用自己在朝廷里的影响力组织了“制宪派”，现在已成为朝廷里仅次于严子珍“忠君派”的第二大力量。制宪派在上有董澄农的亲自领导，严子珍碍于情面不敢随意处置他们；在下又大肆拉拢实业家、知识分子以及外资，有十分强壮的力量。制宪派根植于朝廷中，并以其对民主的高度接纳在民间快速发展。§!"
  YUN_social_democrat_party_BAI:0 "枢密院"
@@ -2085,7 +2089,7 @@
  YUN_radical_socialist_party_BAI:0 "中国国民党"
  YUN_radical_socialist_party_BAI_long:0 "中央派\n§g §!"
 
- YUN_bai_zhu_victory:0 "白族推翻了唐继尧的残暴统治"
+ YUN_bai_zhu_victory:0 "白族掌握了云南政权"
 
  YUN_bai_zu_tt:0 "§Y我们将组织§!§R一支精锐的由白族勇士组成的部队§!"
 
@@ -2099,6 +2103,11 @@
  YUN_po_luo_duo:0 "进攻[BHC.GetNameDef]"
  YUN_wai_a_mu_er:0 "进攻[TRM.GetNameDef]"
  
+ YUN_bao_jin_an_ming:0 "保境安民"
+ YUN_gong_he_xian_zhang:0 "共和宪章"
+ YUN_gong_he_xian_zhang_D:0 "帝国宪章"
+ YUN_zai_zao_dian_jun:0 "再造滇军"
+
  YUN_qu_feng_jian:0 "去封建化"
  YUN_qu_feng_jian_desc:0 ""
  YUN_qu_feng_jian2:0 "迈向世界"
@@ -2121,91 +2130,40 @@
  YUN_wen_ding_de_zheng_fu_desc:0 ""
  YUN_ren_ming_de_xuan_zhe:0 "人民的选择"
  YUN_ren_ming_de_xuan_zhe_desc:0 ""
- YUN_xin_san_ming_a:0 "新三民主义"
- YUN_xin_san_ming_a_zhe_desc:0 ""
- YUN_xin_san_ming_b:0 "新三民主义"
- YUN_xin_san_ming_b_zhe_desc:0 ""
- YUN_xin_san_ming_c:0 "新三民主义"
- YUN_xin_san_ming_c_zhe_desc:0 ""
- YUN_she_bao_ju:0 "社会福利保障局"
- YUN_she_bao_ju_desc:0 ""
- YUN_she_bao_ju2:0 "社会福利保障局"
- YUN_she_bao_ju2_desc:0 ""
- YUN_she_bao_ju3:0 "社会福利保障局"
- YUN_she_bao_ju3_desc:0 ""
- YUN_she_bao_ju4:0 "社会福利保障局"
- YUN_she_bao_ju4_desc:0 ""
- YUN_she_bao_ju5:0 "社会福利保障局"
- YUN_she_bao_ju5_desc:0 ""
- YUN_she_bao_ju6:0 "社会福利保障局"
- YUN_she_bao_ju6_desc:0 ""
- YUN_she_bao_ju7:0 "社会福利保障局"
- YUN_she_bao_ju7_desc:0 ""
- YUN_she_bao_ju8:0 "社会福利保障局"
- YUN_she_bao_ju8_desc:0 ""
- YUN_fu_wu_xing_zheng_fu:0 "服务型政府"
- YUN_fu_wu_xing_zheng_fu_desc:0 ""
- YUN_zi_you_ping_deng_jing_bu:0 "自由、平等、进步"
- YUN_zi_you_ping_deng_jing_bu_desc:0 ""
- YUN_liu_zhu_gong_he:0 "六族共和"
- YUN_liu_zhu_gong_he_desc:0 ""
- YUN_liu_zhu_gong_he2:0 "六族共和"
- YUN_liu_zhu_gong_he2_desc:0 ""
- YUN_lao_dong_fa:0 "劳动法"
- YUN_lao_dong_fa_desc:0 ""
- YUN_lao_dong_fa2:0 "劳动法"
- YUN_lao_dong_fa2_desc:0 ""
- YUN_lao_dong_fa3:0 "劳动法"
- YUN_lao_dong_fa3_desc:0 ""
- YUN_gong_hui:0 "基层工会"
- YUN_gong_hui_desc:0 ""
- YUN_gai_zu_jing_sheng:0 "重振改组精神"
- YUN_gai_zu_jing_sheng_desc:0 ""
- YUN_chun_chun_zi_qing:0 "村村出知青"
- YUN_zhi_shu:0 "一心向党，一心爱国"
- YUN_yu_liang:0 "存粮制"
- YUN_zhong_hua:0 "人本发展理论"
 
- YUN_Yan_1:0 "无冕之王"
- YUN_Yan_1_desc:0 "自白泷覆唐后，这位南唐的南中王，四大家的主心骨，享誉云贵的富商，严子珍，便搬进了太极宫，联合其他三家共同治理这片土地。虽然在这个新生的民主社会中并没有南唐那套吃人的皇帝制度，但严家在政变首义中获得的声望已令其他三家拍马不及，连带着这位掌舵人，也被大众视为白泷当之无愧的国主。"
- YUN_Yan_2:0 "组织白族进入政府"
- YUN_Yan_2_desc:0 "南唐虽灭，但伪朝遗留的旧文官系统仍不断侵蚀着国家，大量官僚良者尸位素餐，不务正业；劣者巧取豪夺，卖官鬻爵。如我朝欲巩固统治，就必须以四大家手下精明能干之白族新人将这些天怒人怨的狗官取而代之。"
- YUN_Yan_3:0 "打倒唐继尧残余"
- YUN_Yan_3_desc:0 "尽管我们把这个大腹便便的军阀从他的宝座上一脚踢了下来，但是那宝座之下的老鼠寄生虫和毒蛇可不会自己死掉，甚至要躲在阴暗的角落里面，找准机会再咬我们一口。我们绝对不能允许这帮祸国殃民的东西们再出来兴风作浪！"
- YUN_Yan_4:0 "清洗军中反对派"
- YUN_Yan_4_desc:0 "时至今日，我们的军队中还存在一些顽固分子，他们不服管教，还心心念念着那套封建君臣纲常，根本不把我们的白族政府放在眼里，继续放任这些人留在我们的军队中恐怕会后患无穷，该让他们尝尝民主的铁拳了。"
- YUN_Yan_5:0 "训练白族勇士"
- YUN_Yan_5_desc:0 "经过一轮的清洗和肃反工作，军队内部暂时得以稳定，但大量复员的士兵和被撤职的将官也使我们的军队达到了有史以来最少的红线，该从我们的白族同胞当中精挑细选一些人来充当门面了。"
- YUN_Yan_6:0 "投资军火生产"
- YUN_Yan_6_desc:0 "虽说南唐给我们留下了一个满目疮痍的烂摊子，但好在那些搜刮来的民脂民膏都被我们全盘接收，加上四大家的银仓和这些日子的休养生息，国家的预算终于是有富余了，这些钱将被投入刚刚起步的军工生产中，以确保这段时期的维稳运动和之后可能开展的对外斗争能够顺利进行。"
- YUN_Yan_7:0 "向封建开战"
- YUN_Yan_7_desc:0 "白族政府确立后，动荡的政局终于迎来了缓和，残存的南唐余孽大多被抓去砍头，少数远逃外省，已经不成气候。虽然现在的云南名义上是民主社会，但之前遗留的封建陋习却还在荼毒这片土地，无论是科技，军备，亦或者思想，这片深处内陆的群山都已跟世界脱节太久，是时候彻底洗净白族的乐土，向世界看齐了。"
- YUN_Yan_8:0 "赋权平民"
- YUN_Yan_8_desc:0 "以民为本，这一理念贯穿了数千年的封建社会并一直绵延至今，而大多数人都将其视为一句无痛不痒的口号，但在这片新生的白族乐土之上，这句口号将不再是一纸空谈，清明的政府会为权利的行使保驾护航，新民法的筹备工作也已提上日程，人民不再是独夫的私产，他们将斩断专制的镣铐，为自己而活！"
- YUN_Yan_9:0 "迈步向世界"
- YUN_Yan_9_desc:0 "极北的巨熊深陷分裂泥沼，西方的凯撒已无力再续荣光，东瀛更是在与我们的战局中惨败，至此，神州大地再度走向真正的统一，白泷旗下的中华大地将重归世界列强，没有人能阻挡彩云之国的崛起，前进！雄狮出东方，傲视天下疆！"
- YUN_Yan_10:0 "平民的工业"
- YUN_Yan_10_desc:0 "自列强叩关、神州陆沉以来，已有数十年。数十年间，中华大地烽火连营，流民四散。而今，白泷匡复神州，再立九鼎，与民更始。担惊受怕的日子再也不会有了，是时候让老百姓过上好日子了。"
- YUN_Yan_11:0 "商导经济"
- YUN_Yan_11_desc:0 "传统驱使历代统治者贬低打压商业发展，这导致农业长期把持着我国的经济命脉，也导致了我国的落后。要想真正富国强兵，不向列强屈膝，就必定要改革现状，振兴商贸。"
- YUN_Yan_12:0 "一国"
- YUN_Yan_12_desc:0 "龙岩，革命之乡。这里有宋庆龄带领人民抗击清廷的佳话，也有汪兆铭千里还乡驰援革命的美谈。不过一切早就结束了，这里已被我们占领，该处理流亡中的国民党了。"
- YUN_Yan_13:0 "一君"
- YUN_Yan_13_desc:0 "如今[Root.GetLeader]已经大权在握，全国上下无不听从他调令的。但是清廷在日本当上了寓公，他们不可能对我们的政权完全没有影响。我们需要对清廷采取一些措施，暗杀他们……或者至少要求他们承认我们。"
- YUN_Yan_14:0 "一府"
- YUN_Yan_14_desc:0 "旧直隶政权虽然已经宣布倒台，但百足之虫死而不僵，少数北洋遗老依然畅想着他们的帝国梦，还有一些与我们政见不合的地方军阀对帝国的政令阳奉阴违，再放任他们这样自行其是，白泷合法政府的权威性将会受到极大挑战。给他们发电，顺便叫上那些被打散的兵痞和军头，告诉他们，白泷会给他们一席之地，前提是对皇帝陛下做到绝对的服从。"
- YUN_Yan_15:0 "一人之下的平等"
- YUN_Yan_15_desc:0 "今之白泷，人人生而平等，各地官员皆简拔于民，各方将官皆擢升于军，商贾，农人，书生隔阂不再，老有所终，壮有所用，幼有所长，三纲五常崩于纤纤皓腕，黄发垂髫，并怡然自乐，海内归心，天下大同之景，尽在眼前。"
+ YUN_Yan_1:0 "保境安民"
+ YUN_Yan_1_desc:0 "唐继尧的倒台让潜伏在云贵大地的野心家们倾巢而出，发动了惨烈的内战。最终，朱培德率领的国民党残兵笑到了最后，然而种种迹象表明，他只想借革命之名施行和唐继尧无二的军事独裁，为了避免朱培德的倒行逆施再次引发冲突影响生意，严子珍联合喜洲四大家用计从朱培德手中躲过了权柄，现在，这位商场的智者要做的就是冷静下来，把保境安民作为新政府的主要任务。"
+ YUN_Yan_2:0 "接纳竹王会"
+ YUN_Yan_2_desc:0 "“竹王会”起初只是一部分少数民族部族头人为了自保建立的秘密团体，不过在和地方政府抗衡的过程中，他们也逐渐在少数民族部族集中的山区形成了事实割据，让历任地方政府头疼不已。而作为云南第一个少数民族主导的政府，如今的新政府大可以靠招安他们一劳永逸地解决这个问题，同时壮大新政府的力量。"
+ YUN_Yan_3:0 "改善大理基建"
+ YUN_Yan_3_desc:0 "昆明历来是云南毋庸置疑的首府，不过在数月之久的云南内战中，这座城市变得千疮百孔，只好由新政府发源的大理接过首府的重任，大理本身亦是历史悠久，可惜由于长期偏居滇西，历任政府都疏忽了建设，所以为了让大理能更好地发挥首府的作用，改善大理的基础建设势在必行。"
+ YUN_Yan_4:0 "确立省宪法权威"
+ YUN_Yan_4_desc:0 "在辛亥革命推翻了中国的帝制之后，脱离清廷独立的各个共和派省份都确立了自己的宪法，譬如云南便由松坡将军等人编写了一份省宪法。然而，袁世凯的篡权以及德国人悍然扶持清廷复辟让法律的权威受到了侮辱，导致唐继尧之流的独裁专政也能肆意践踏省宪法的权威，为了不再重蹈历史的覆辙，新政府将时刻以省宪法为最高准则，以身作则确立省宪法至高无上的威严。"
+ YUN_Yan_5:0 "召集云南政治人物"
+ YUN_Yan_5_desc:0 "随着手握军权的实力派悉数折损于滇系内战，此前长期受到压抑的民主人士们都迫不及待要发出声音，而暂时负责维持新政府的四大家也对政治一窍不通，因此，为了云南的未来，新政府的首脑严子珍将亲自于家族宅邸设宴，邀请云贵的民主人士们品茶用膳，共商国是。"
+ YUN_Yan_6:0 "利用商帮资源"
+ YUN_Yan_6_desc:0 "作为辛亥革命遗留的独苗，云贵在中国的博弈中显得相当孤立无援，不仅没有邻近势力帮衬，甚至还要直接受到德国人的盘剥。不过，云贵政府的孤立没能阻碍商帮们把生意做大，以喜洲四大家为首的商帮已有了可观的商业版图，贸易网络远达海外，积累的资金亦是充裕，如今商帮接过了国民政府的权柄，何不利用这些资源呢？"
+ YUN_Yan_7:0 "修缮战争损失"
+ YUN_Yan_7_desc:0 "在滇系内战中，为了强迫另一方割据势力服从，各路割据势力轮番发动了数次残酷的围城战，除了地方势力强大的大理，几乎没有哪个城市能够幸免于难，广大农村地区更是满目疮痍，新政府不能坐视大半个云贵的人民住在战后的断壁残垣之中，必须立刻出资出力，援助各地着手重建自己的家园。"
+ YUN_Yan_8:0 "永念松坡将军"
+ YUN_Yan_8_desc:0 "松坡将军也许不是共和第一人，但却是当之无愧的再造共和第一人。当年袁逆意欲再登帝位，正是蔡将军无惧强敌威逼利诱，置生死于度外，先亲赴北京虚与委蛇，再抛荣弃贵起事护国。虽天公无情，使蔡将军英年早逝，但松坡不畏强权，维护共和的气节正是共和时代所有人最需要的助力。"
+ YUN_Yan_9:0 "整合滇军"
+ YUN_Yan_9_desc:0 "滇军发源于清廷在云南组建的新军，是中国大地上少数完全西方化的强力武装，然而在蔡松坡将军死去后，这支劲旅变得派系林立，争执不休，甚至酿成了如今滇系内战的惨剧。如今，滇军内部各个派系的山头都消亡于内战之中，他们手下的兵也变得群龙无首，我们迫切需要以保卫家乡的理念再次把他们整合起来。"
+ YUN_Yan_10:0 "省宪筹备会议"
+ YUN_Yan_10_desc:0 "虽然新政府已经基本确立了宪政的原则，但如今施行的旧省宪年代久远，对如今的许多新情况难以适应，而不少民主人士也纷纷指出了旧省宪的弊端。现在，新政府已经初步起草了一份新的省宪法，为了确保万无一失，是时候召开正式会议，邀请民主人士们讨论颁布新省宪的具体事宜了。"
+ YUN_Yan_11:0 "共和之云南"
+ YUN_Yan_11_desc:0 "在新政府这段时间的努力下，唐继尧之流专制的遗毒终于被一扫而光，自由的云贵人民在省宪筹备会议上迫切地发出了想要当家做主的声音。那么，是时候了，把选票还给他们，让他们能畅快地行驶宪法赋予自己的权利，而现任政府也将逐步改组为一个现代化的政党，以迎接即将到来的选举。"
+ YUN_Yan_12:0 "民主化暂停"
+ YUN_Yan_12_desc:0 "尽管新政府上下忠于共和，绝无篡权独裁之二心，然而在省宪筹备会议的紧张讨论中，我们发现贸然开放民主选举只会徒增矛盾，给外敌可乘之机。所以，在彻底扫清全国范围内威胁民主共和的势力之前，现任政府将不得不暂时独揽大权，如同护法战争时期的松坡将军。"
 
- yunyan.1.t:0 "卷一·本纪第一·高祖（节选）"
- yunyan.1.d.chongqing:0 "初，大唐立，帝尧起兵出云南，欲往西川。蜀道虽难，帝者自宽。帝不爱粮秣兵将，固而往之。待复渝州，巴蜀尽收，帝乃据此而望长安。然帝远在秦外，地去司州，与云贵悬隔千里。南有德贼之限，北有俄戎之患，龙起之地，久日维艰，亟一良臣，经略云贵，此一稳固江山，若使奸佞割据云贵，则天子虽还，失其襟带，二则保全退路，若战事危急，天子告败，则重回云贵，保全忠良，枕戈待旦，一朝而席卷寰宇，重正大统。\n\n帝尧以前朝皆武人犯禁而使九州陷沦，乃密使下择一翰林，遥控滇地，勿使武人叛乱复现于今。或曰：严苍逸何如。帝不解，复曰：严子珍者，号苍逸，喜洲望族，少时从商，悉心竭力，目达耳通，只十余年，市井徒而成一方巨贾，今忝为“永昌祥”掌柜，其人虽商贾出身，然不染铜臭，于乡里多接济闾左，兴办学堂以开民智，奔走于滇粤浙沪，不为名利，所得之财利多助上北伐，实为肱骨之臣。帝大悦，乃封为南中王，领云南节度，视同正二品，后加封右羽林大将军，一省财赋，军旅，政务之令出，皆从其手。\n\n“奉天承运皇帝敕曰：朕惟治世以文，戡乱以武。而军帅戎将实朝廷之砥柱，国家之干城也。乃能文武兼全，出力报效讵可泯其绩而不嘉之以宠命乎。尔苍逸公虽商贾，然燃薪达旦，破卷通经，授以文职理宜然也。不意朕北伐满贼，南越扰我滇地，尔才盛文昭，援古今颇牧，近在南中，兹特授尔为云南节度使，锡之敕命于戏，威振夷狄。钦哉。”"
- yunyan.1.d.guangzhou:0 "“初，大唐立，帝尧起兵出云南，败粤军于楚庭城下，两广尽入其手。既克粤逆，欲讨贼于福州。然帝远在闽外，地去丰州，与云贵悬隔千里。南有德贼之限，北有俄戎之患，龙起之地，久日维艰，亟一良臣，经略云贵，此一稳固江山，若使奸佞割据云贵，则天子虽还，失其襟带，二则保全退路，若战事危急，天子告败，则重回云贵，保全忠良，枕戈待旦，一朝而席卷寰宇，重正大统。\n\n帝尧以前朝皆武人犯禁而使九州陷沦，乃密使下择一翰林，遥控滇地，勿使武人叛乱复现于今。或曰：严苍逸何如。帝不解，复曰：严子珍者，号苍逸，喜洲望族，少时从商，悉心竭力，目达耳通，只十余年，市井徒而成一方巨贾，今忝为“永昌祥”掌柜，其人虽商贾出身，然不染铜臭，于乡里多接济闾左，兴办学堂以开民智，奔走于滇粤浙沪，不为名利，所得之财利多助上北伐，实为肱骨之臣。帝大悦，乃封为南中王，领云南节度，视同正二品，后加封右羽林大将军，一省财赋，军旅，政务之令出，皆从其手。\n\n“奉天承运皇帝敕曰：朕惟治世以文，戡乱以武。而军帅戎将实朝廷之砥柱，国家之干城也。乃能文武兼全，出力报效讵可泯其绩而不嘉之以宠命乎。尔苍逸公虽商贾，然燃薪达旦，破卷通经，授以文职理宜然也。不意朕北伐满贼，南越扰我滇地，尔才盛文昭，援古今颇牧，近在南中，兹特授尔为云南节度使，锡之敕命于戏，威振夷狄。钦哉。”"
- yunyan.1.d.changsha:0 "初，大唐立，帝尧起兵出云南，讨赵湘，及至克复潇湘，湖广已下半城，帝乃北望鄂南。然帝远在鄂外，地去荆州，与云贵悬隔千里。南有德贼之限，北有俄戎之患，龙起之地，久日维艰，亟一良臣，经略云贵，此一稳固江山，若使奸佞割据云贵，则天子虽还，失其襟带，二则保全退路，若战事危急，天子告败，则重回云贵，保全忠良，枕戈待旦，一朝而席卷寰宇，重正大统。\n\n帝尧以前朝皆武人犯禁而使九州陷沦，乃密使下择一翰林，遥控滇地，勿使武人叛乱复现于今。或曰：严苍逸何如。帝不解，复曰：严子珍者，号苍逸，喜洲望族，少时从商，悉心竭力，目达耳通，只十余年，市井徒而成一方巨贾，今忝为“永昌祥”掌柜，其人虽商贾出身，然不染铜臭，于乡里多接济闾左，兴办学堂以开民智，奔走于滇粤浙沪，不为名利，所得之财利多助上北伐，实为肱骨之臣。帝大悦，乃封为南中王，领云南节度，视同正二品，后加封右羽林大将军，一省财赋，军旅，政务之令出，皆从其手。\n\n“奉天承运皇帝敕曰：朕惟治世以文，戡乱以武。而军帅戎将实朝廷之砥柱，国家之干城也。乃能文武兼全，出力报效讵可泯其绩而不嘉之以宠命乎。尔苍逸公虽商贾，然燃薪达旦，破卷通经，授以文职理宜然也。不意朕北伐满贼，南越扰我滇地，尔才盛文昭，援古今颇牧，近在南中，兹特授尔为云南节度使，锡之敕命于戏，威振夷狄。钦哉。”"
- yunyan.1.a:0 "吾皇万岁万岁万万岁"
- yunyan.2.t:0 "国库告急"
- yunyan.2.d:0 "一封来自大理严氏的奏折刚刚呈递到皇帝手中。奏折指出，皇帝长期的夸张开销使得国库日渐捉襟见肘，云南商界压力巨大，日后势必造成经济动荡乃至上一次云南内战一般的混乱。如皇帝能励精图治，略微削减一部分“不必要”的开支，大理四大家可以安抚商界并填补一部分损失；而若皇帝一意孤行，四大家将不对日后可能的动乱负责。"
- yunyan.2.a:0 "朕日理万机，享受享受怎么了？"
- yunyan.2.b:0 "朕不能坏了先祖世民的名声，理应精兵简政"
+ yunyan.1.t:0 "稳定四方"
+ yunyan.1.d:0 "“将军，该决定您巡访的路线了。”副官的声音让朱培德从案牍中抬起头，虽说他麾下的国民革命军已经平定云南，但各地各方势力仍蠢蠢欲动，也是为了稍稍散心，于是他决定进行全省巡视，如今正是决定路线的时刻。\n\n“大理严子珍，贵阳王伯群，都发来电报，希望能抢得率先迎接您的机会。”朱培德心中不禁遐想，大理永昌祥的沱茶驰名西南，大理必定有香茗静候，贵阳地势奇险，山水之间享片刻安宁也是不错之选。沉吟半晌，朱培德发话："
+ yunyan.1.a:0 "“先去贵阳赏赏景”"
+ yunyan.1.b:0 "“先去大理品品茶”"
+ yunyan.2.t:0 "鸿门宴"
+ yunyan.2.d:0 "“朱将军，这茶不知您意下如何？”严子珍眯起的双眼里透露出的沉静不禁让朱培德放松了些许警惕，对于官宦家庭出身的他来说，独属于年长者的这份沉着似乎格外有吸引力。“浓淡相宜，回味良久，大理永昌祥的沱茶确实名不虚传。也不知严兄是用了何等高明手段，才让这茶香回转无穷。”\n\n“朱将军过誉了，烹茶煮茶不过是本人从小可望不可即之事，我虽有些许出身却是过继子，无论如何也是不受待见。每每家中长辈烹茶品茗，我只有在一旁侍候听命的份，于是我立誓要喝上自己煮的茶，廿岁出城经商，一路受尽白眼，终究是堪堪有了些许家业。曾经的所谓家人，如今却要来找我借款，求我打点生意。朱将军，我行商多年，你可知学到的最宝贵的一句话是什么？”\n\n“益之洗耳恭听。”严子珍笑而不语，却转向一旁德润生商行的董澄农：“董经理，我刚才遣人去取些新茶，可估计是伙计愚钝，怎么半晌不见动静，可否劳烦您再安排一下？”董澄农满脸堆笑：“严老，既是赠与朱将军的香茗，兹事体大，我亲自前去吧。”“那便劳烦董经理。”\n\n严子珍转过头，正视着朱培德，这位叱咤西南的将军看向这位巨商眼里，却惶恐的发现自己找不到刚才的沉静了。如今严子珍的双眼似乎要透出精光，目光所及只有商人的世故与贪婪，这是看向猎物的眼神。“朱将军”，老翁的声音响起，却像是锯木时木屑迸发之声，“我学到的最关键一句，就是士农工商。”朱培德心中转过一句凛然，突然感到身后一阵推力，讲自己粗暴按倒在桌上，沱茶香茗被打翻在地，青白瓷杯破碎如同人的灵魂。他看不到身后是何人，只看到周遭影影绰绰冲进许多壮汉。\n\n“朱将军，失礼了。”严子珍留下这一句话，便起身走回内堂，方才离去的董澄农不知何时以站在圆桌对面：“朱培德，你上台后携兵甲之势，以共和之名行独裁之实，更是以稳定名号大举屠杀我白族子民。我等竹王之后，松坡之民，容不下你这般狭隘自欺，暴虐无德之人！今日以滇境各族人民之名，将你捉拿下狱，俟后审判！”朱培德心中怒意刚升，正待挺起腰板，却只觉脑后一阵痛意，天旋地转，失去了知觉。"
+ yunyan.2.a:0 "士农工商，求仕为大"
+
  yunyan.3.t:0 "讨伪唐檄"
  yunyan.3.d:0 "自前伪朝起事以来，於今不过二年矣。然临望滇地，流民遍野，田地荒芜，一片炼狱之景，比于前朝更甚。向使前伪朝爱我云贵子民，不尽刮民财，使饿殍遍野，千里蛮荒，则人主可奉。然则逆尧豺狼成性，坐堂时多横征暴敛。家有丁男者，无不掳入军中，驱之临阵向前；家有余财者，无不抢掠罄尽，以充内帑；家有妇孺者，无不收入内廷，供贼酋玩乐，向前所言，若有阴谋逃归，违其命者，皆斩首以示众。曩者南中怡然自乐、安闲自得之景，已作飞灰尽散矣。\n\n伪帝唐尧，饕餮放横，伤化虐民，窃盗鼎司，倾覆神器，人神之所同嫉，天地之所不容。今我白泷因天下之失望，顺宇内之推心，四家连心，爰举义旗，以清妖孽。南连百越，北尽廷尉，铁骑成群，比肩随踵。粟米溢于仓，辎重何足忧也；旌旗立如云，兵甲何足虑也。班声动而北风起，剑气冲而南斗平。轰轰隐隐，如霆如雷，彪虎啸而谷风生，应龙骧而景云起。有此制敌，何敌不催；有此破城，何城不克！\n\n白泷四家联席曰：伪帝唐尧以暴酋之政鞭策云南，荼毒我同胞数百余万，蹂躏云贵千余里，使我同胞呻吟痛苦于万恶专制淫威之下，是以起兵破贼日，扫清宇内正当时。卿等或陌巷良子，或地协周亲，或膺重寄于爪牙，或受顾命于贼室，倘能壹心为民，投军破贼，共立新政之勋，无废先人之命，高官上赏，即以相授。若暗于成事，守迷不反，徘徊歧路，坐昧先几之兆，必贻后至之诛，尔等噬脐，悔将何及!黄河带地，明余旦旦之言;皎日丽天，知我勤勤之意。传檄远近，咸使闻知。"
  yunyan.3.a:0 "剪除伪唐，扫净蝇蛆，可不勖哉！"
@@ -2235,28 +2193,6 @@
  yunyan.10.d:0 "已阅，不允."
  yunyan.10.a:0 "他算什么东西？干他丫的！"
  yunyan.10.b:0 "暂且放他一马。"
- yunyan.11.t:0 "处理国民党"
- yunyan.11.d:0 "辛亥革命一声炮响，把中国的封建王朝打得屁滚尿流，魂不着体。如今国民党被赶出国境之外，毫无疑问，他们已经没有力量能够反对我们的大一统政府了。不过他们中的激进分子对我们的社会仍有威胁，他们中也有不少合作派可以为我们所用。我们该如何处理国民党？"
- yunyan.11.a:0 "这群败类总有一天会挡住我们前进的道路"
- yunyan.11.b:0 "和汪兆铭谈谈"
- yunyan.11.c:0 "和汪兆铭谈谈"
- yunyan.11.e:0 "不用管他们"
- yunyan.12.t:0 "一触即溃"
- yunyan.12.d:0 "军队挺进闽南山区后，国民党的顽固武装分子几乎立刻溃败了。无数红匪要么被打死要么被俘虏。只用了几天时间，我们的大部队就荡平了暴徒的老巢。损失不大，但是国民党在大陆上的最后一个基地被打破了，这就够弥补损失了。"
- yunyan.12.a:0 "睡个安稳觉咯"
- yunyan.13.t:0 "致汪兆铭"
- yunyan.13.d:0 "汪娘可爱捏嘿嘿嘿[YUN.GetLeader]怎么来抢我老婆了？不要啊啊啊"
- yunyan.13.a:0 "一路走好，汪兆铭"
- yunyan.13.b:0 "我对贵国没有兴趣，你们请不要再来了(关门)"
- yunyan.14.t:0 "香山会议"
- yunyan.14.d:0 "汪兆铭幸然同意了我们的会谈请求。我们在香山进行会面，这是一座美丽的小城，四处风光优美，但它最特别的一点在于它是国民党革命的最初的领导人——孙文的故乡。汪兆铭从上海登陆，在南京瞻仰过中山陵后南下香山参会。在紧密的筹备工作下，汪兆铭与陈果夫的会谈完美地展开了。走出会场后，陈果夫向众人宣布："
- yunyan.14.a:0 "汪兆铭同意让国民党重新加入中国！"
- yunyan.14.b:0 "汪兆铭同意解散国民党！"
- yunyan.14.c:0 "他不同意啊！幹！"
- yunyan.15.t:0 "希望落空"
- yunyan.15.d:0 "我们的努力白费了，汪兆铭不同意和谈。我们在国际上的脸面丢尽了。不过把龙岩那些国民党暴徒打死，兴许还有挽回的余地。这是最后的机会，一旦失败则会一衰再衰。"
- yunyan.15.a:0 "那么，发起进攻。"
- yunyan.15.b:0 "我们没有更多可以损失的了。"
  yunyan.16.t:0 "二帝会面"
  yunyan.16.d:0 "攻下东京一个月后，战场清扫工作慢慢进入尾声，东京外围残破的建筑大多推倒重建，流散的平民被半强制地安置进数个由帐篷或棚屋搭建起来的“临时生活区”。得益于白泷军严明的军纪，城内的古建筑都被保存的相对完好，也没有出现骚扰居民的情况。将士的遗骸大多都被收敛并分批运回白泷，日军的尸体则一并焚烧，骨灰交由日本过渡政府处理。\n\n在得知善后工作已趋完备后，白泷的国主，应乾文武至圣仁皇帝，严子珍，便迫不及待地乘坐他的私人飞机——泷造运6-“乾元”号，飞往东京。当天中午，飞机抵达东京机场，数十人在舷梯下等待，两旁则是肃立的禁卫军。在场的接机人员包括白泷军的各级将领，日本过渡政府的高官，以及天皇的亲弟弟，秩父宫雍仁亲王。皇帝陛下一下飞机，没来得及和雍仁亲王交谈，跟在场人员简单寒暄几句后，便坐上了开往东京皇居的特制防弹轿车。一路上，汽车经过天空桥，岳泉寺，最后于樱田门进入皇居内部，沿途的古建筑让陛下赞不绝口，甚至一度提出要在东京建一座山庄以充行台之用。\n\n车子在同裕仁会面的居室前停下，但就在陛下即将进门与裕仁天皇会面前，日本外相特意提及，因为天皇先天身材矮小，所以万不能做出俯视等轻视举动，同时作为日本天皇，应用“阁下”相称，以示尊敬，而且不可与天皇合影，必须经过天皇允许才能拍照等，陛下对此不置可否，只是微微颔首。\n\n进门后，映入眼帘的是一个身高大概在一米六五上下，体格瘦弱，梳着三七分的中年男子，陛下有些意外，这个看起来有些文弱，甚至说的上怯懦的矮子便是日本的天皇吗？陛下无意间轻嗤一声，说道：“裕仁先生，别来无恙乎。”裕仁仿佛听不见这声嘲笑，应了一声，便邀请陛下入座。二人的谈话一直持续到傍晚，会谈内容包括日本战后的重建工作，原有政府的去留，军队的存废，以及最重要的一点，天皇制度是否保留。当天会谈的详细内容被列为绝密，尽数记录在陛下的起居注和日本过渡政府的公文上并封存。会后，陛下不顾日本外相的强烈反对，拉上裕仁便要合影，被架在火上的裕仁只好半推半就地同意合影。随着相机闪光灯闪过，“咔嚓”一声，沉稳的陛下，无所适从的“天皇”，构成了这张历史性的合照。"
  yunyan.16.a:0 "日本的新时代降临了"
