--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -5142,7 +5142,7 @@
  HNN_shen_bing_dang_yuan:0 "长沙城上起红云，"
  HNN_shen_bing_dang_yuan_desc:0 "长沙，湖南的中心，是全湖南工人的聚焦地，我们必须将这里牢牢的掌握在自己的手中。这里不仅是经济的心脏、工业的脊梁，更是无数劳动者挥洒汗水、铸就辉煌的圣地！我们绝不能有丝毫松懈，必须以坚定的信念和无可动摇的决心，将这座英雄之城牢牢掌控在我们手中，让它成为不可撼动的坚强堡垒，点燃湖南腾飞的熊熊烈焰！"
  HNN_xin_yang_gai_zao:0 "烈焰燃时遍地彤。"
- HNN_xin_yang_gai_zao_desc:0 "要想将神兵这支革命的潜在力量彻底化为革命的生力军，我们就需要从头开始，从根本上改造神兵们的信仰世界，在保持着贺龙便是活龙便是真命天子这样的论述下一步一步的剔除其他神仙，并最终将这样的神佛下凡转变为纯粹的属灵。"
+ HNN_xin_yang_gai_zao_desc:0 "要想将神兵这支革命的潜在力量彻底化为革命的生力军，我们就需要从头开始，从根本上改造神兵们的信仰世界，在保持着贺龙便是活龙便是真命天子这样的论述下一步一步的剔除其他神仙，并逐步将这样的神佛下凡转变为纯粹的属灵，最终彻底瓦解这样的神话。"
  HNN_zheng_zhi_su_fan:0 "湘鄂川黔蛟龙腾"
  HNN_zheng_zhi_su_fan_desc:0 "时机到了，革命的烈火已经熊熊燃起，那些混入其中的反革命们已经被我们逼入了绝境，如今只需要再推一把我们就能将他们完全剔除出革命队伍之中。同时，我们的乡亲们他们幻想出一个皇帝一个真命天子来救你们。乡亲们！这就想错了，你们看见没有皇帝来救你们，七想八想就想靠菩萨靠神来救你们。如今，大家终于醒悟了过来，打破幻想不再有什么神仙皇帝，穷人只能靠自己的双手砸碎旧世界才能得生存！"
  HNN_tian_ye_hong_lai:0 "天也红来地也红，"
