--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1277,6 +1277,7 @@
  HNN_he_long: "贺龙"
  HNN_He_Long_carm: "贺龙"
  POLITICS_HNN_HE_LONG_DESC:0 "贺龙在贫苦农家中出生长大，从小没怎么受过正规的教育。贺龙的父亲是名清朝小吏，颇有番武力，这些才能在贺龙身上也有所体现。20岁时，贺龙的叔叔因欠债被税吏活活打死，而贺龙一气之下直接杀掉了税吏，从此开始了他那漫长的游击斗争生涯。1920年，国民党异军突起，此时贺龙劫富济贫的法外好汉的名气越传越远，他带着爱刀一人一刀组建了一支地方部队。北伐期间，贺龙在张发奎手下担任教官与指挥官的角色，也在党内找到了自己的归宿——社会主义。北伐的失败并没有浇灭贺龙渴望祖国变革的热情，虽然他被迫退回老家湖南省，但是在湖南他和彭德怀一同为工团主义者的活动提供庇护。"
+ POLITICS_HNN_HE_LONG_SHEN_BING_DESC:0 "贺龙在贫苦农家中出生长大，从小没怎么受过正规的教育。贺龙的父亲是名清朝小吏，颇有番武力，这些才能在贺龙身上也有所体现。20岁时，贺龙的叔叔因欠债被税吏活活打死，而贺龙一气之下直接杀掉了税吏，从此开始了他那漫长的游击斗争生涯。1920年，国民党异军突起，此时贺龙劫富济贫的法外好汉的名气越传越远，他带着爱刀一人一刀组建了一支地方部队。北伐期间，贺龙在张发奎手下担任教官与指挥官的角色，也在党内找到了自己的归宿——社会主义。北伐的失败、工团起义的失败都没有浇灭贺龙渴望祖国变革的热情，如今他卷土重来，誓要将革命进行到底。"
  HNN_he_long_commander_desc:0 "§Y生于：§!§L1896年3月22日；大清帝国、湖南省桑植§!\n§Y派系：§!§R第八军激进派§!\n§Y背景：§!§L贺龙在贫苦农家中出生长大，少年的贺龙以其正直忠诚而闻名乡里。1914年，贺龙加入了孙中山的中华革命党。1918年，他在湘西组织起一支农民革命武装，并因此赢得了“绿林好汉”的名声。1920年，受到桃源知识分子的影响，贺龙开始接触马克思主义。1922年，应孙中山请求，贺龙率军进入四川，但由于军队内部分裂，未能取得重大进展。\n\n这段经历使他反对孙中山与地方军阀合作的政策。1924年，在第一次改组以及与第三国际结盟后，他加入了国民党。被赵恒惕赶出四川后，贺龙退到了贵州。1926年，贺龙将他的军队并入了唐生智将军的第八军，作为国民党的军阀盟友，唐生智希望能从赵恒惕手中夺回湖南。在北伐战争中，贺龙与第八军表现优异，但德国的干涉以及攻占武汉的失利，导致了国民党的失败。\n\n汪精卫率领中央委员会流亡巴黎，并在那里待了近十年。独立于中央委员会之外的唐生智则率领部下进入邻近的江西以躲避赵恒惕的还乡团，并在该地与孙传芳的部队展开游击战。1932年上海起义后，唐生智又与邓演达的闽赣起义军联合。贺龙在第八军中建立了一个更激进的派系，并任命彭德怀为其副手，他自己则作为该派系的非正式领导人。贺龙希望他的上级唐生智会与以农民为重的宋庆龄临委会结盟。§!"
  POLITICS_HNN_YE_JIAN_YING_DESC:0 "叶剑英1919年毕业于云南军校，同年加入国民党。在“六一六”事变期间，他站在孙中山一边，公开与陈炯明在广州的势力作战，并帮助孙中山逃离广州。他是建立黄埔军校的主要参与者之一，并在那里教书。曾任师长，参加过北伐战争与镇压广州商团的行动。国民革命军失败后，叶剑英回到广东，加入中国工团党。尽管理论上叶剑英应该和广州商团完全敌视，但事实上，二者的关系相当不错。这也让他对于经济建设工作有了别样的思考..."
  POLITICS_HNN_MAO_ZHE_DONG_DESC:0 "毛泽东生于湖南湘潭韶山冲，幼年入私塾读书，曾务农。1918年4月14日，新民学会在蔡和森家中成立，萧子昇为总干事，毛泽东为干事；不久萧子昇赴法国勤工俭学，会务由毛泽东主持。同年10月，经恩师杨昌济介绍，毛泽东认识了时任北京大学图书馆主任，日后的革命家李大钊，李大钊安排他当了月薪8元的图书馆书记。1920年底，毛泽东先后参与组建长沙社会主义小组和长沙社会主义青年团。1921年，毛泽东出席参与中国工团党第一次代表大会，建立中国工团党。\n\n两党合作之后，毛泽东一度担任国民党上海执行部组织部秘书、代理宣传部长，1926年入选国民党中央执行委员会委员。同年由于北伐战争的失败，对革命丧失信心的毛泽东改名换姓重新返回了他的故乡湖南湘潭在一所私塾中教书躲避军阀赵恒惕的通缉。不过这种失落是短暂的，随着董必武、何叔衡等人在湖南三省边界建立起革命根据地。得到消息的毛泽东第一时间申请加入根据地工作，但是董必武并没有将他留下反而是建议他利用自己教书先生的身份返回长沙做地下工作。在王震的协助下，毛泽东筹建起来被捣毁的长沙支部，任支部书记。他白天在学校教师，晚上办报纸、撰写宣传册、向根据地转发情报。在建国以后，毛泽东担任起了湖南省委书记的重任。\n\n他本以为随着全国统一就能够让中华儿女过上更好的生活，让贫苦的农民摆脱贫困，但他错了。党中央在土地改革才刚刚起步时就宣布了土地改革结束，这种赤裸裸的背叛行为引发了他的反击，如今他成功登上了中国的政治巅峰，他将按照自己的意愿重塑中国的革命。"
@@ -5117,15 +5118,32 @@
  hunsanqipudu.8.a:0 "取名叫幸福..."
 
 #红色神兵
- HNN_PROC_H:0 "中华大同公社"
- HNN_PROC_H_ADJ:0 "中国"
- HNN_PROC_H_DEF:0 "中国"
+ HNN_PROC_H:0 "中华大同苏维埃共和国"
+ HNN_PROC_H_ADJ:0 "中华大同苏维埃共和国"
+ HNN_PROC_H_DEF:0 "中华大同苏维埃共和国"
+
+ HNN_totalist_party_shen_long_vic:0 "中国共产党"
+ HNN_totalist_party_shen_long_vic_long:0 "中国共产党\n§g共产党在世界革命的浪潮中只是渺小的一部分，但是如今，贺龙在经历了一次又一次的失败后终于明白唯有共产主义才是真正的道路。§!"
+ HNN_totalist_party_shen_long:0 "红色神兵"
+ HNN_totalist_party_shen_long_long:0 "红色神兵\n§g贺龙的再一次尝试，他势必要将一切非革命的扫入历史的尘埃，他必将掀起又一次人民的浪潮。§!"
+ HNN_national_populist_party_shen_long:0 "联英会"
+ HNN_national_populist_party_shen_long_long:0 "联英会\n§g联英会由侗族人乾善统建立于1919秋，长期活跃在宣恩，在国民党的北伐中联英会痛击了逃亡的袁祖铭名震鄂西，同时也是早在那时联英会就与工团党建立了联系，尽管乾善统未入党，但是联英会中有相当成分的工团党人。§!"
 
  HNN_shen_bing_revolution:0 "神兵起义"
  HNN_shen_bing_revolution_desc:0 "大革命失败以来的近十年磨砺了贺龙的心性，革命绝不是什么一蹰即就的事情，哪怕是失败一次、两次、无数次他都不会放弃，在国民党的北伐、工团党的暴乱接连失败后，贺龙收拢了残兵，前往了湘西的山林中，他重新拾起了数十年前的身份与当地的袍哥和神兵们建立起了联系，并利用着我们破败的乡村谋划着下一次作乱..."
+ HNN_zu_zhi_wei_jiao:0 "组织围剿"
+
+ HNN_huo_long:0 "“活龙”\n§g贺龙原名贺文常，号云卿，但是这个名字他并不满意，其幕僚提出“云中卿客，唯龙也”，贺文常便改名贺龙，后来打出名号，人称“活龙”。§!"
+ HNN_he_qing_tian:0 "贺青天"
 
  HNN_shen_bing_victory:0 "§R神兵起义§!成功"
- HNN_shen_bing_revolution_tt:0 "这将化解§R神兵§!的危机"
+ HNN_shen_bing_revolution_tt:0 "这将化解湘西§R神兵§!危机"
+ HNN_shen_bing_victory_tt:0 "§R贺龙的起义成功了！§!"
+
+ HNN_chu_mo_dang_kou:0 "除魔荡寇"
+ HNN_revolution_in_the_countryside_he_idea:0 "农村革命"
+ HNN_sabotaged_industry:0 "土匪军"
+ HNN_sabotaged_industry_desc:0 "在我们的队伍中混入了太多的反革命，我们必须要解决这个问题..."
 
  HNN_hong_se_shen_bing:0 "残焰摇风欲曙天，"
  HNN_hong_se_shen_bing_desc:0 "尽管国民党与工团党的起义皆化为了灰烬，但是贺龙，他仍旧没有放弃，大革命以来每一年每一天都在磨练他的心性。他收编了两股残兵，在湘西、黔北、川东收编那些所谓的神兵，尽管他明白这些人中相当一部分完全不懂得什么是三民主义、什么是工团主义，甚至相当一部分都已经变成了地主的附庸，他们无法笼统的分为革命的和反革命的，因为他们完全不明白什么是革命，但是只有仍然有人在反抗，那么革命的火就有燃烧的可能！"
@@ -5144,11 +5162,37 @@
  HNN_xin_yang_gai_zao:0 "烈焰燃时遍地彤。"
  HNN_xin_yang_gai_zao_desc:0 "要想将神兵这支革命的潜在力量彻底化为革命的生力军，我们就需要从头开始，从根本上改造神兵们的信仰世界，在保持着贺龙便是活龙便是真命天子这样的论述下一步一步的剔除其他神仙，并逐步将这样的神佛下凡转变为纯粹的属灵，最终彻底瓦解这样的神话。"
  HNN_zheng_zhi_su_fan:0 "湘鄂川黔蛟龙腾"
- HNN_zheng_zhi_su_fan_desc:0 "时机到了，革命的烈火已经熊熊燃起，那些混入其中的反革命们已经被我们逼入了绝境，如今只需要再推一把我们就能将他们完全剔除出革命队伍之中。同时，我们的乡亲们他们幻想出一个皇帝一个真命天子来救你们。乡亲们！这就想错了，你们看见没有皇帝来救你们，七想八想就想靠菩萨靠神来救你们。如今，大家终于醒悟了过来，打破幻想不再有什么神仙皇帝，穷人只能靠自己的双手砸碎旧世界才能得生存！"
+ HNN_zheng_zhi_su_fan_desc:0 "时机到了，革命的烈火已经熊熊燃起，那些混入其中的反革命们已经被我们逼入了绝境，如今只需要再推一把我们就能将他们完全剔除出革命队伍之中。同时，我们的乡亲们过去他们常常幻想出一个皇帝一个真命天子来救你们。但是，乡亲们！这就想错了，你们看见没有皇帝来救你们，七想八想就想靠菩萨靠神来救你们。如今，大家终于醒悟了过来，打破幻想不再有什么神仙皇帝，穷人只能靠自己的双手砸碎旧世界才能得生存！"
  HNN_tian_ye_hong_lai:0 "天也红来地也红，"
  HNN_tian_ye_hong_lai_desc:0 "烈焰焚天，赤潮席卷，革命之火已从湘西群山燃向三湘四水。长沙城头赤旗漫卷，洞庭湖畔战鼓震天，工农兵的旗帜插遍每座县城。"
  HNN_jiu_si_le_xin_ye_hong:0 "就是死了心也红！"
  HNN_jiu_si_le_xin_ye_hong_desc:0 "头戴八角帽的农民弓着脊梁，镰刀在麦浪中划出金色弧光，汗珠坠入新翻的褐土，化作春泥滋养着写在田垄间的标语。山腰上，扎绑腿的工人抡起铁锤，火星在暮色里迸溅成星群，震落岩壁间沉睡的弹壳。扁担压弯了十八道山梁，麻绳勒进古铜色的肩胛，蜿蜒的队伍背着铁锅与步枪，把苏维埃的火种播进云雾。染血的杜鹃花瓣飘落在磨盘旁，碾槽里还留着昨夜炒熟的麦粒，石缝中却已钻出嫩红的芽尖。当晨雾漫过战壕，染着硝烟味的红旗突然在峰顶招展——那竟是千树万树的枫叶，正把秋山点燃成不灭的火焰！"
+
+ hnnshenbing.1.t:0 "湘西暴乱"
+ hnnshenbing.1.d:0 "政府内部的权力斗争最终导致了不可挽回的灾难。曾几何时，我们还能凭借兵力上的绝对优势，轻松镇压工团党制造的暴乱，使湖南维持在勉强可控的局势之下。然而，如今的局面已然大不相同。我们的部队在面对那些不知从何而来的狂信徒时，竟显得如此不堪一击。这些人口中念念有词，呜哇乱叫，仿佛受到了某种神秘力量的庇佑，而我们的士兵却在战场上节节败退，甚至开始出现整队整队的逃兵，他们宁愿投奔敌人。\n\n更令人不安的是，从湘西、黔北等战区传来的战报无一例外都是坏消息。我们的防线正在崩溃，补给线岌岌可危，曾经坚守的要塞一个个陷落，而政府高层的争斗仍未平息，内耗依旧在消磨我们最后的希望。若再不采取果断行动，恐怕整个局势将彻底不可挽回。现在，我们能做的，便是争分夺秒，在最后的时间里想方设法挽救这场危机，否则，一切都将化为泡影。"
+ hnnshenbing.1.a:0 "还愣着什么？跑啊！"
+ hnnshenbing.2.t:0 "神兵"
+ hnnshenbing.2.d:0 "神兵是一股流窜在川湘鄂黔地区的松散民间农民武装、少数民族武装，内部派别复杂且通常不互相认，有些用武器称呼叫大刀会、红枪会、白枪会、双刀会、鞭杆会；有的取自服饰，如红带会、白带会、黄带会、双带会；有时取其教义，如救劫教、真武道、儒释教、信义坛、三教坛，四川有的又叫刀儿教，或者谐音刀二匠。他们中有的识字懂时局，国民党作乱的时候他们也跟着宣传三民主义，有些又是纯文盲什么都不懂。他们最初建立组织时有些叫立佛堂，有些叫阴打会，还有些叫起场子莫衷一是，极其松散。各路神兵中最庞大的一股是恩施咸丰黑洞的神兵，土家族的王锡九长年在这里作乱，索性后来北王占元给镇压了，王锡九也处决了，但是神兵还是没有剿灭掉，在这片区域还是又很大的能量，省政府长年只能剿抚并用。\n\n贺龙是桑植县洪家关人，母亲是土家族，祖上又长期和洪家关白族有姻亲关系，青年时代就入了天地会当了袍哥，在当年素有“活龙”、“贺青天”的称呼，极有威望，如今此人重返山林，我们必须抓紧剿讨，绝不能让他做大！"
+ hnnshenbing.2.a:0 "剿匪！必须剿匪！"
+ hnnshenbing.3.t:0 "花萼山抗税"
+ hnnshenbing.3.d:0 "项宗诗，官渡乡项家坪人。父辈弟兄3人，成德、成纪、成献，项宗诗的父亲排行第二。宗诗一辈弟兄6人，宗诗、宗书、宗执、宗礼、宗统、宗绪，人多田地少，项成纪带起一家从官渡湾街头搬上花萼山花熊坪。花熊坪地广人稀，谋生容易。花萼山纵横百里，竹林繁茂，可设槽勺火纸卖。最近我们的税务分局范理纯前去收税，这些人竟然打局抗捐，后来还和一个从陕南来的神棍“廖八字”一起当神兵，宗诗父子在官渡对岸玛瑙溪双庙子设立佛堂，成立“挽劫会”，廖当法师，宗诗自任会长，秘密训练“神兵”，组织群众。项宗诗说：“要挽劫，把廖灭”。山民入会者达1000多人。\n\n近日，项宗诗带领300人一夜之间突入万源城，攻入县城大牢，放出被县城关押的300人犯。项部在城中与县政府血战，因众寡悬殊，未能取胜，项撤出县城，退到陕西渔渡坝、盐厂坝等地活动。"
+ hnnshenbing.3.a:0 "我们哪儿有空去管他们"
+ hnnshenbing.3.b:0 "抓紧时间剿灭这些叛匪"
+ hnnshenbing.4.t:0 "高罗神兵"
+ hnnshenbing.4.d:0 "并非所有的神兵都是叛贼，高罗最初的一伙神兵是1920年开始兴起的，后来还和黑洞的王锡九一伙有火并，被剿灭后，当地一个名叫李飞瞎子的自称是某某神仙下凡，在庙里给人画符水，收编了这支神兵，又得到了当地豪绅、地主的支持，由李飞瞎子和他的弟子杨雪海组织了起了新神兵，又号义勇队，大队长杨学海，辖高罗、朝阳、李溪、新安等四个乡。于当年五月至年底，扎营于挨山村老察上的徐、廖二宅，常驻在此的有一百多人。神兵给养由各士豪筹集，即各士豪的田地在哪个保，就由这个保的保长找该士豪筹捐。如黎台成、黎清成、杨鹏程等土豪在六保有田士，就由六保保长找他们筹捐。改称“义勇队”以后，还得到了县政府拨予的给养。"
+ hnnshenbing.4.a:0 "这是个好办法"
+ hnnshenbing.5.t:0 "审判"
+ hnnshenbing.5.d:0 "乾善坤看着自己宝贝的大花马被人牵走，恶狠狠地盯着收走自己双刃宝剑的那个小鬼，将平生最恶劣的脏词都宣泄在了押送他的红军士兵上，在这群小鬼还在娘胎里头他乾善坤就在是行走天下的好汉了。菩萨保佑，他的傲气不允许他对这群小兔崽子低头。\n\n不过即使他骂得再别出心裁，也没有人回应他，于是乾善坤即便脾气再暴躁骂了一个时辰后也骂累了，只得乖乖跟着红军走。\n\n突然，只见前方一排人站着，同自己一样戴着镣铐脚铐，乾善坤大吃一惊，只见四面八方有名有姓的神兵头子、袍哥好汉都来了，第一个就是那宣恩高罗的李飞瞎子和他的徒弟杨云海，他带着手下给那土豪做打手，赚的盆满钵满。旁边是“苗王”龙云飞，也是道上赫赫有名的好汉，当然了那肯定比不起贺胡子。一转头，只见远处走来十几个年轻士兵，每人手上拿一把枪。\n\n还没等他反应过来，乾善坤就被押到和其他人一排，接着和其他人一样呗按着跪下来。\n\n一排黑洞洞的枪口对着他们。\n\n乾善坤意识到怎么回事了，他大吼着："
+ hnnshenbing.5.a:0 "“贺云卿，我是你结拜兄弟啊！”"
+ hnnshenbing.6.t:0 "一心一意"
+ hnnshenbing.6.d:0 "贺龙将军是穷人的救星，这在湘鄂西的乡亲们心里，早就是铁打的事实。\n\n施白心原是个穷苦汉，祖祖辈辈刨地讨饭，日子过得比黄泥巴还苦。地主老财压榨，兵匪乱抢，连口热乎饭都是奢望。他恨透了这世道，可穷人能咋办？光恨不顶饱，光骂不管用。\n\n后来，贺龙带着神军来了，杀土豪，分田地，还把穷人当亲人看待。施白心头一回吃上红军的饭，烫嘴的红薯、喷香的苞谷粥，让他眼泪汪汪。他心里像锻铁一样，烧得通红，打得坚硬：这日子跟着贺龙才有盼头！\n\n地主恶霸说：“贺龙就是红匪，迟早让官军剿灭！”施白心冷笑：“要剿也该先剿你们这些吸血虫！”亲戚劝：“造反哪有好下场？”施白心一挥拳头：“不反，咱一辈子就这样跪着活！”\n\n他扔下破锄头，提起大刀，跟着贺龙上了战场。从泥腿子到红军战士，他在枪林弹雨里拼杀，把命都押在了这条翻身路上。贺龙说：“为穷人打天下，不怕苦，不怕死！”施白心点头：“我铁了心，死也不回头！”"
+ hnnshenbing.6.a:0 "铁血忠义"
+ hnnshenbing.7.t:0 "从来没有救世主"
+ hnnshenbing.7.d:0 "乡亲们，你们看见没有皇帝来救你们，七想八想就想靠菩萨、靠神来救你们。你们就学神兵，立神坛，有神兵神将，口称打不进杀不进。大家开起神坛来反抗苛捐杂税，本来这就是农民反抗地主豪绅统治的革命斗争的一种原始形式。这一个革命斗争后来混入了反革命地主、豪绅将神兵打毁了！打也打得进，杀也杀得进，连房子也烧去了许多。反革命军队的进攻，实际上就是地主豪绅对我们农民抗税斗争的进攻和摧残。在这个斗争中，神坛内的人就分成两部分了：一部分人他本身是地主豪绅，他就去投降反革命，他就去招安他与敌人妥协，一致地来压迪我们工农群众；另一部分人，则是工农群众和代表工农群众的领袖。他们一方面受着军阀的压迫，另外一面，又受着这一部分神坛内面反叛出去的地主豪绅的叛卖。所以他们的出路，只有继续着这一反地主豪绅反军阀的斗争，才有出路！现在来参加我们红军的，主要的是这一部分群众和代表工农群众利益的神兵领袖。这是农民斗争由神兵的形式进步到苏维埃运动的具体过程。在尖锐的阶级对立的形式之下，工农群众是完全团聚在苏维埃革命的战线上了。"
+ hnnshenbing.7.a:0 "全靠我们自己！"
+ hnnshenbing.8.t:0 "农会纲领"
+ hnnshenbing.8.d:0 "我们农民协会，为了我们自己的利益，要同地主豪绅作斗争。我们斗争的纲领如下：1、不还地主租稞。2、不还富人的债，取消高利借贷。3、反抗一切苛捐杂税(门牌捐、月捐、鸦片捐、屠宰税等...)，取消收税机关。4、没收地主、富农的粮食、财务、衣物，分给贫苦的农民。5、要求增加工资，改良待遇，减少工作时间。6、释放被官府捕去的农民。7、逮捕和惩办一切官吏豪绅（区长、保董)及收税人员。8、组织农民自卫队，武装自已，保护身家。9、因为农民协会是一个革命的团体，凡是反帝国主义反封建反军阀，拥护工农利益之革命的团体，我们都与联合。10、我们主张信教自由，凡是信神的，不信神的，信教的，不信教的农民，均可加入协会。"
+ hnnshenbing.8.a:0 "武装起来"
 
  CHI_bai_wenwei: "柏文蔚"
  CHI_dai_anlan: "戴安澜"
