--- a/localisation/KR_Yunnan_l_simp_chinese.yml
+++ b/localisation/KR_Yunnan_l_simp_chinese.yml
@@ -2072,7 +2072,9 @@
 
  YUN_Yan_zi_zen:0 "严子珍"
  POLITICS_YUNNAN_YAN_DESC:0 "严子珍，原姓杨，具体姓名无从考究。童年丧父，随母嫁入严家，十五、六岁时独立门户，以微薄的借贷资本起家。1903年，严子珍联合彭永昌，杨鸿昌在大理下关合资创办“永昌祥”商号， “永昌祥”经营十余年，商铺遍及中国大江南北、东南亚。其间，严家与杨家联姻，并吸收了多位合伙人的投资，商号隐隐以严子珍为中心。之后彭永昌和杨鸿春和平退伙，在退清了他们的股本后，严家独占鳌头， “永昌祥”方由严子珍单独经营管理，这个商号才真正成为了他施展经商才能的大舞台。"
-
+ 
+ YUN_social_conservative_bai_party:0 "竹王会"
+ YUN_social_conservative_bai_party_long:0 "竹王会\n§g竹王会是一个主要由土司首领、政客和那些担心自己被汉人取代的少数民族组成的秘密团体。§!"
  YUN_authoritarian_democrat_party_BAI:0 "云贵商帮联盟"
  YUN_authoritarian_democrat_party_BAI_long:0 "云贵商帮联盟\n§g云南如今的商帮大多发迹于清末，发展至今在滇西已经形成了腾越帮，喜洲帮，鹤庆帮三大商帮，其中又以喜洲帮的“四大家”实力最盛。这些四处走动的贸易天才们对政治并无兴趣，但在传统的经营模式和在各地接触的现代商业的碰撞之间，他们也逐渐形成了一套以温和的自由主义为中心的世界观，并试图更紧密地联合起来，以维护一个能自由贸易的市场环境。§!"
 
